# onnx_detection_gpu

./: .gitignore  CMakeLists.txt  Dockerfile  PIPELINE_NOTES.md  README.md  main.cpp  record_output.sh  run_pipeline.sh  run_with_display.sh  run_with_display_2.sh  split_frame.py
doc/: motion_compensation.md  onnxtracker-documentation.md
gst-template/: meson.build
gst-template/gst-plugin/: meson.build
gst-template/gst-plugin/src/: gstonnxinference.cpp  gstonnxinference.h  gstonnxmeta.cpp  gstonnxmeta.h  gstonnxoverlay.cpp  gstonnxoverlay.h  gstonnxpostprocess.cpp  gstonnxpostprocess.h  gstonnxtracker.cpp  gstonnxtracker.h
